# cpl

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  STYLE.md  build.sh  test.sh
.github/workflows/: cmake.yml  test.yml
include/cpl/: dummy.hpp  modnum.hpp
include/cpl/array/: coordinate_compression.h
include/cpl/num/: bigint.hpp  modint.hpp  modnum.hpp  num.hpp
include/cpl/string/: z-function.hpp
include/cpl/strings/: z-function.hpp
include/cpl/structure/: tensor.hpp
include/cpl/structures/: segment-tree.hpp  tensor.hpp
test/: CMakeLists.txt  dummy.cpp  main.cpp
test/num/: bigint.cpp  modint.cpp  modnum.cpp  num.cpp
test/string/: z-function.cpp
test/strings/: z-function.cpp
test/structure/: tensor.cpp
test/structures/: tensor.cpp
